--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,49 +1,3 @@
-{
-    "name": "dense-pixel-attributions",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "@fontsource/roboto": "^4.5.8",
-        "@mui/material": "^5.11.8",
-        "@pixi/react": "^7.0.1",
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^13.0.0",
-        "@testing-library/user-event": "^13.2.1",
-        "bootstrap": "^5.2.3",
-        "d3": "^7.8.2",
-        "env-cmd": "^10.1.0",
-        "jquery": "^3.6.3",
-        "pixi.js": "^7.1.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.0"
-    },
-    "scripts": {
-        "start": "env-cmd -f .env.dev react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
-}
-
+version https://git-lfs.github.com/spec/v1
+oid sha256:54c7ef9c16c5f6ace442c4ea8bf711b914c40d1d19d3a8a5f5bb72e57cb0cb02
+size 1314
