--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -36,7 +36,7 @@ STOPSIGNAL SIGQUIT
 
 COPY ./docker/nginx.conf /etc/nginx/nginx.conf
 
-COPY ./docker/start.sh ./start.sh
-RUN chmod a+x ./start.sh
+COPY --chmod=0755 ./docker/start.sh ./start.sh
+# RUN chmod a+x ./start.sh
 
 CMD ["./start.sh"]
