--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update && \
     nginx
 
 COPY ./app/backend /app
+RUN mkdir -p data/
 
 RUN pip install --no-cache-dir -r requirements.txt
 
